<resources>
    <string name="app_name">로스트아크: 숙제했니?</string>
    <string name="check_homework">숙제 체크</string>
    <string name="mari_shop">마리의 비밀상점</string>

    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="daily">일간</string>
    <string name="raid">레이드</string>
    <string name="weekly">주간</string>
    <string name="reset_weekly">주간\n초기화</string>
    <string name="reset_daily_and_raid">일간, 레이드\n초기화</string>

    <string name="default_mari_item_name">아이템 이름</string>
    <string name="mari_suggest_t1_t2">T1 &amp; T2 성장 추천</string>
    <string name="mari_suggest_t3">T3 성장 추천</string>

    <string name="homework_daily">일간</string>
    <string name="homework_weekly">주간</string>

    <string name="licence_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAls8fKwHSV9z7cLIgl4jsmKdXQFsTO" +
            "DzQ93N44hZHTu9OcRg9gJOcFQum3j3EgRG1cd0rCRQ6AQeLReMKLIhttIeuKhrOh7S" +
            "MW/el3iRzviu3D6xeM7nVWUzjYP3PUMu355mqCaWVlQkcEHiR8QBtOpIvpTLE7BFUb0" +
            "UTD+9Mdrp4fb78/2KfrFURZ5iRtRfWupJTpY787AMUBmrssYGETH2QkW96uQ9WJNWYj" +
            "dJOmuPHxno0gHwhikyT+jM83csWiXgw2xDVjQsv2dnagfTrjefJJpuMG0Fo79I2y73Z" +
            "9Jlfs8ZLTGBFXt4QYY+6ZSGJDR3ZyCcrWuzIKbmNbD0/PwIDAQAB</string>
</resources>
