<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.queserasera.lostarkhomework.homework.HomeworkViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".homework.HomeworkActivity">

        <!-- top menu -->
        <LinearLayout
            android:id="@+id/ark_homework_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@color/dark_gray"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:baselineAligned="false">
            <!-- menu 1: 일간 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/dark_gray"
                android:paddingBottom="3dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/daily"
                        android:paddingBottom="10dp"
                        android:textSize="18sp"
                        android:layout_gravity="bottom|center_horizontal"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"/>
            </LinearLayout>
            <!-- menu 2: 레이드 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:paddingBottom="3dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/raid"
                        android:paddingBottom="10dp"
                        android:textSize="18sp"
                        android:layout_gravity="bottom|center_horizontal"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"/>
            </LinearLayout>

            <!-- menu 3: 주간 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:paddingBottom="3dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/weekly"
                        android:paddingBottom="10dp"
                        android:textSize="18sp"
                        android:layout_gravity="bottom|center_horizontal"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/ark_horizontal_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ark_homework_tab">
        </View>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ark_homework_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/ark_reset_tab"
            app:layout_constraintTop_toBottomOf="@id/ark_horizontal_divider"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toTopOf="@id/ark_reset_tab"/>

        <FrameLayout
            android:id="@+id/ark_reset_tab"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/reload_button_daily"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/reload_icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/reset_daily_and_raid"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical|center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/reset_weekly"
                    android:layout_marginEnd="10dp"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical|center_horizontal"/>
                <ImageView
                    android:id="@+id/reload_button_weekly"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/reload_icon"/>
            </LinearLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>